--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "zhuzi <nmz89825@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@notionhq/client": "^0.1.8",
+    "dotenv": "^10.0.0",
     "fast-csv": "^4.3.6",
     "lowdb": "^1.0.0",
     "puppeteer": "^5.5.0"
