--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@notionhq/client": "^0.1.8",
+    "dayjs": "^1.10.5",
     "dotenv": "^10.0.0",
     "fast-csv": "^4.3.6",
     "lowdb": "^1.0.0",
