:hankey: change: finish fetch item extra info function.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dayjs": "^1.10.5",
     "dotenv": "^10.0.0",
     "fast-csv": "^4.3.6",
+    "got": "^11.8.2",
+    "jsdom": "^16.6.0",
     "lowdb": "^1.0.0",
     "puppeteer": "^5.5.0"
   }
