:sparkles: feature: add sync rss script.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "got": "^11.8.2",
     "jsdom": "^16.6.0",
     "lowdb": "^1.0.0",
-    "puppeteer": "^9.1.1"
+    "puppeteer": "^9.1.1",
+    "rss-parser": "^3.12.0"
   }
 }
