--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "keywords": [
     "douban",
+    "notion",
     "backup",
-    "csv"
+    "csv",
+    "rss"
   ],
   "author": "zhuzi <nmz89825@gmail.com>",
   "license": "MIT",
@@ -19,6 +21,7 @@
     "dotenv": "^10.0.0",
     "fast-csv": "^4.3.6",
     "got": "^11.8.2",
+    "image-downloader": "^4.0.3",
     "jsdom": "^16.6.0",
     "rss-parser": "^3.12.0"
   }
