:bug: bugfix: fix error handler when fetching or inserting and can remove columns if not added in database.

--- a/.github/workflows/sync-rss.js.yml
+++ b/.github/workflows/sync-rss.js.yml
@@ -33,4 +33,4 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
-    - run: node sync-rss.js
+    - run: node sync-rss.js || exit 1
