:construction: workflow: try manual trigger.

--- a/.github/workflows/sync-rss.js.yml
+++ b/.github/workflows/sync-rss.js.yml
@@ -3,11 +3,14 @@
 
 name: sync-rss
 
+# on:
+#   schedule:
+#     # https://docs.github.com/en/actions/reference/events-that-trigger-workflows#scheduled-events
+#     # Runs every 6 hours
+#     - cron:  '0 */6 * * *'
+
 on:
-  schedule:
-    # https://docs.github.com/en/actions/reference/events-that-trigger-workflows#scheduled-events
-    # Runs every 6 hours
-    - cron:  '0 */6 * * *'
+  workflow_dispatch: # try to manual
 
 jobs:
   build:
