--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
   "author": "zhuzi <nmz89825@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@notionhq/client": "^0.4.13",
-    "dayjs": "^1.10.7",
+    "@notionhq/client": "^1.0.0",
+    "dayjs": "^1.10.8",
     "dotenv": "^16.0.0",
     "fast-csv": "^4.3.6",
     "got": "11.8.3",
-    "image-downloader": "^4.0.3",
     "jsdom": "^19.0.0",
     "rss-parser": "^3.12.0"
+  },
+  "devDependencies": {
+    "image-downloader": "^4.1.0"
   }
 }
