--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   "author": "zhuzi <nmz89825@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@notionhq/client": "^2.1.0",
-    "dayjs": "^1.11.4",
-    "dotenv": "^16.0.1",
+    "@notionhq/client": "^2.2.0",
+    "dayjs": "^1.11.5",
+    "dotenv": "^16.0.2",
     "fast-csv": "^4.3.6",
-    "got": "11.8.3",
+    "got": "^11.8.5",
     "jsdom": "^20.0.0",
     "rss-parser": "^3.12.0"
   },
