--- a/.github/workflows/sync-rss.js.yml
+++ b/.github/workflows/sync-rss.js.yml
@@ -29,6 +29,7 @@ jobs:
       NOTION_DRAMA_DATABASE_ID: ${{ secrets.NOTION_DRAMA_DATABASE_ID }}
       DOUBAN_USER_ID: ${{ secrets.DOUBAN_USER_ID }}
       NEODB_API_TOKEN: ${{ secrets.NEODB_API_TOKEN }}
+      CUSTOM_COLUMN_NAME: ${{ secrets.CUSTOM_COLUMN_NAME }}
 
     steps:
     - uses: actions/checkout@v3
