--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -1,26 +1,38 @@
 name: Update Notion Links
 
 on:
-  workflow_dispatch:
-    inputs:
-      database_id:
-        description: 'Notion Database ID'
-        required: true
+  workflow_dispatch: 
 
 jobs:
-  update-links:
+  update-movie-links:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v3
+      
+      - uses: actions/setup-node@v4
         with:
-          node-version: 18
-
+          node-version: 22
+          
       - run: npm ci
-
-      - name: Run updater
+      
+      - name: Run movie updater
         env:
           NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
-          NOTION_DATABASE_ID: ${{ inputs.database_id }}
-        run: npx run patch
+          NOTION_DATABASE_ID: ${{ secrets.NOTION_MOVIE_DATABASE_ID }}
+        run: npx tsx src/update-notion-links.ts
+  update-books-links:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          
+      - run: npm ci
+      
+      - name: Run movie updater
+        env:
+          NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
+          NOTION_DATABASE_ID: ${{ secrets.NOTION_BOOK_DATABASE_ID }}
+        run: npx tsx src/update-notion-links.ts
