--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "fast-csv": "^5.0.2",
     "got": "^14.4.6",
     "jsdom": "^26.0.0",
+    "playwright": "^1.57.0",
     "rss-parser": "^3.13.0"
   }
 }
